--- a/src/component/navbar/Navbar.module.css
+++ b/src/component/navbar/Navbar.module.css
@@ -8,7 +8,7 @@
   display: flex;
   align-items: center;
   justify-content: space-between;
-  background: white;
+  background: whitesmoke;
   backdrop-filter: blur(8px);
   transition: background-color 0.3s ease;
 }
